--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -8,7 +8,7 @@ order: 1
 ---
 <header>
   <h2 class="alt">Welcome to my BS-free zone. My name Neil Austin, the No BS Fitness Professional.</h2>
-  <p>Adapted for Jekyll by <a href=https://chrisbobbe.github.io/>Chris Bobbe</a>. Get started on <a href="https://github.com/chrisbobbe/jekyll-theme-prologue">GitHub!</a></p>
+  <p>Tired of being sold more and more BS by the fitness industry? Let's chat.</p>
 </header>
 
 <footer>
