--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -7,7 +7,7 @@ icon: fa-comment
 order: 1
 ---
 <header>
-  <h2 class="alt">Welcome to my BS-free zone. My name Neil Austin, the No BS Fitness Professional.</h2>
+  <h2 class="alt">Welcome to No BS, your BS-free resource for Training, Nutrition, and Apparel. My name is Neil Austin, the No BS Fitness Professional.</h2>
   <p>Tired of being sold more and more BS by the fitness industry? Let's chat.</p>
 </header>
 
