--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -7,7 +7,7 @@ icon: fa-comment
 order: 1
 ---
 <header>
-  <h2 class="alt">Welcome to No BS, your BS-free resource for Training, Nutrition, and Apparel.</h2>
+  <h2 class="alt"><b><strong>Welcome to No BS, your BS-free resource for Training, Nutrition, and Apparel.</strong></b></h2>
   <p>Tired of being sold nothing but BS by the fitness industry? Let's chat.</p>
 </header>
 
