--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -7,8 +7,8 @@ icon: fa-comment
 order: 1
 ---
 <header>
-  <h2 class="alt"><b><strong>Welcome to No BS, your BS-free resource for Training, Nutrition, and Apparel.</strong></b></h2>
-  <p>Tired of being sold nothing but BS by the fitness industry? Let's chat.</p>
+  <h2 class="alt"><b>Welcome to No BS Training.</b></h2>
+  <p>None of the BS, more of what works.</p>
 </header>
 
 <footer>
