--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -4,14 +4,14 @@ icon: fa-th
 order: 2
 ---
 
-<a href="#" class="image featured"><img src="assets/images/IMG_0562.JPG" alt="" /></a>
+<a href="#" class="image featured"><img src="assets/images/IMG_2524.JPG" alt="" /></a>
 <p>“I hired Neil because I was looking to get strong and buff like him. My results have been wonderful I have gotten a lot stronger which 
  gave me a lot more self-confidence which keeps me coming back every time. I would highly recommend Neil Austin's services as a 
  personal trainer even if you're not looking to get buff because he is very interested in helping people and he is a very friendly person 
  to associate with which is half the reason I keep going back to the gym.”</p>
 <strong>-Shreyas Annapureddy</strong>
 
- <a href="#" class="image featured"><img src="assets/images/IMG_0562.JPG" alt="" /></a>
+ <a href="#" class="image featured"><img src="assets/images/Juli Bacon.jpg" alt="" /></a>
 <p>"I hired Neil after getting fed up with a long period of being in bad shape and often sick. I have been working with him for a year and 
 my results have been amazing.  I've never been stronger, I've lost fat and gained a lot of muscle.  I could barely lift the bar for bench 
 press and can now do 120lb and I just hit 410 on the leg press. Neil knows exactly how to motivate me and puts together challenging 
@@ -19,7 +19,7 @@ programs for me. I don't hide from the camera anymore and it's great to wear tan
 <strong>-Juli Bacon</strong>
 
 
-<a href="#" class="image featured"><img src="assets/images/IMG_0562.JPG" alt="" /></a>
+<a href="#" class="image featured"><img src="assets/images/Kurt Tripp.jpg" alt="" /></a>
 <p>“Neil Austin.  Partially irritated but with an open mind is how I met Neil, my former trainer had abruptly quit.
 However, we quickly established a great working relationship that continues after over 2 years.
 This guy pushes me way harder than I can or would, ever push myself.  I would absolutely recommend
