--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -7,10 +7,12 @@ icon: fa-comment
 order: 1
 ---
 <header>
-  <h2 class="alt"><b><strong>Welcome to            No BS           Training.</b></strong></h2>
+  <h2 class="alt"><b><strong>NO BS TRAINING</b></strong></h2>
   <p>None of the BS, more of what works.</p>
 </header>
 
 <footer>
-  <a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+  <a href="#contact us" class="button scrolly">LET'S CHAT</a>
 </footer>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/z3v7SNgjZ0s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
