--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -13,7 +13,7 @@ order: 1
 </header>
 
 <footer>
-  <a href="#contact us" class="button scrolly">LET'S CHAT</a>
+  <a href="#contact" class="button scrolly">LET'S CHAT</a>
 </footer>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/z3v7SNgjZ0s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
