--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -1,11 +1,10 @@
 ---
 title: Intro
-cover-photo: assets/images/IMG_2372.jpg
-cover-photo-alt: example cover photo
 auto-header: none
 icon: fa-comment
 order: 1
 ---
+<body bgcolor="#FF0000"> 
 <header>
   <h2 class="alt"><b><strong>NO BS TRAINING</b></strong></h2>
   <p>None of the BS, more of what works.</p>
