--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -1,5 +1,7 @@
 ---
 title: Intro
+-cover-photo: assets/images/black background.jpg
++cover-photo: assets/images/black background.jpg
 auto-header: none
 icon: fa-comment
 order: 1
