--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -1,5 +1,7 @@
 ---
 title: About Me
+cover-photo: assets/images/black background.jpg 
+cover-photo-alt: example cover photo
 icon: fa-user
 order: 3
 ---
