--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -1,5 +1,7 @@
 ---
 title: Testimonials
+cover-photo: assets/images/black background.jpg 
+cover-photo-alt: example cover photo
 icon: fa-th
 order: 2
 ---
