--- a/_sections/contact.html
+++ b/_sections/contact.html
@@ -4,7 +4,9 @@ icon: fa-envelope
 order: 4
 ---
 
-
+<p>Sick of being sold nothing but BS by so-called "fitness professionals" on the internet? You and me both.
+  For a no-pressure, BS-free chat about your fitness goals, fill out the form below.
+  Look forward to hearing from you.
 <form method="post" action="https://formspree.io/neilaustin@nobsfit.pro">
   <div class="row">
     <div class="6u 12u$(mobile)"><input type="text" name="name" placeholder="Name" /></div>
