--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -1,6 +1,6 @@
 ---
 title: Intro
-cover-photo: assets/images/black background.jpg 
+cover-photo: assets/images/IMG_2701.jpg  
 cover-photo-alt: example cover photo
 auto-header: none
 icon: fa-comment
