--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -1,14 +1,15 @@
 ---
 title: Intro
-cover-photo: assets/images/IMG_2706.jpg  
+cover-photo: assets/images/black background.jpg  
 cover-photo-alt: example cover photo
 auto-header: none
 icon: fa-comment
 order: 1
 ---
 <body bgcolor="#FF0000"> 
+  
 <header>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/z3v7SNgjZ0s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </header>
 
 <footer>
