--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -6,6 +6,7 @@ auto-header: none
 icon: fa-comment
 order: 1
 ---
+<a href="#" class="image featured"><img src="assets/images/IMG_2706.JPG" alt="" /></a>
 <body bgcolor="#FF0000"> 
   
 <header>
