--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -6,13 +6,13 @@ auto-header: none
 icon: fa-comment
 order: 1
 ---
-<a href="#" class="image featured"><img src="assets/images/IMG_2706.JPG" alt="" /></a>
 <body bgcolor="#FF0000"> 
   
 <header>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/z3v7SNgjZ0s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  <a href="#" class="image featured"><img src="assets/images/IMG_2706.jpg" alt="" /></a>
 </header>
 
 <footer>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/z3v7SNgjZ0s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   <a href="#contact" class="button scrolly">LET'S CHAT</a>
 </footer>
