--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -9,13 +9,22 @@ order: 3
 <a href="#" class="image featured"><img src="assets/images/IMG_0562.JPG" alt="" /></a>
 
 <p>My name is Neil Austin, certified No BS Fitness Professional.
-   The thing that got me started on the crazy journey that's led me here was graduating High School at 135lbs soaking wet. Not exactly your starting quarterback. 
+   
+   The thing that got me started on the crazy journey that's led me here was graduating High School at 135lbs soaking wet. Not exactly your starting quarterback.
+   
    I realized I needed to make a big change, and guess what. I did it. Day after day after day of hard work and consistency finally paid off.
+   
    Along the way I discovered my passion for helping other people get the same kind of big results. That led me to personal training and to a big box
    corporate-owned gym, where I trained an eclectic lineup of clients that ranged from high school athletes to people recovering from
    MS, brain aneurysms, and parkinsons. 
+   
    I loved my clients and everything about my job except for one very disturbing thing. Everywhere I looked, I saw people being manipulated.
+   
    Everywhere I looked, I saw people being harrassed and sold to and treated like just another dollar sign.
+  
    Basically, I saw I whole bunch of BS.
+  
    Fast forward to today: I am an independent trainer and business owner dedicated to cutting through all the BS that's out there in order
-   to help people truly change their lives. My mission is simple. Get rid of the BS, and teach people what actually works.</p>
+   to help people truly change their lives. 
+   
+   My mission is simple. Get rid of the BS, and teach people what actually works.</p>
