--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -8,23 +8,23 @@ order: 3
 
 <a href="#" class="image featured"><img src="assets/images/IMG_0562.JPG" alt="" /></a>
 
-<p>My name is Neil Austin, certified No BS Fitness Professional.
+<p>My name is Neil Austin, certified No BS Fitness Professional.</p>
    
-   The thing that got me started on the crazy journey that's led me here was graduating High School at 135lbs soaking wet. Not exactly your starting quarterback.
+<p>The thing that got me started on the crazy journey that's led me here was graduating High School at 135lbs soaking wet. Not exactly your starting quarterback.</p>
    
-   I realized I needed to make a big change, and guess what. I did it. Day after day after day of hard work and consistency finally paid off.
+<p>I realized I needed to make a big change, and guess what. I did it. Day after day after day of hard work and consistency finally paid off.</p>
    
-   Along the way I discovered my passion for helping other people get the same kind of big results. That led me to personal training and to a big box
-   corporate-owned gym, where I trained an eclectic lineup of clients that ranged from high school athletes to people recovering from
-   MS, brain aneurysms, and parkinsons. 
+<p>Along the way I discovered my passion for helping other people get the same kind of big results. That led me to personal training and to a big box
+corporate-owned gym, where I trained an eclectic lineup of clients that ranged from high school athletes to people recovering from
+MS, brain aneurysms, and parkinsons.</p>
    
-   I loved my clients and everything about my job except for one very disturbing thing. Everywhere I looked, I saw people being manipulated.
+<p>I loved my clients and everything about my job except for one very disturbing thing. Everywhere I looked, I saw people being manipulated.</p>
    
-   Everywhere I looked, I saw people being harrassed and sold to and treated like just another dollar sign.
+<p>Everywhere I looked, I saw people being harrassed and sold to and treated like just another dollar sign.</p>
   
-   Basically, I saw I whole bunch of BS.
+<p>Basically, I saw I whole bunch of BS.</p>
   
-   Fast forward to today: I am an independent trainer and business owner dedicated to cutting through all the BS that's out there in order
-   to help people truly change their lives. 
+<p>Fast forward to today: I am an independent trainer and business owner dedicated to cutting through all the BS that's out there in order
+to help people truly change their lives.</p>
    
-   My mission is simple. Get rid of the BS, and teach people what actually works.</p>
+<p>My mission is simple. Get rid of the BS, and teach people what actually works.</p>
