--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -9,7 +9,7 @@ order: 1
 <body bgcolor="#FF0000"> 
   
 <header>
-  <a href="#" class="image featured"><img src="assets/images/IMG_2706.jpg" alt="" /></a>
+  <a href="#" class="image featured"><img src="assets/images/logo with text.png" alt="" /></a>
 </header>
 
 <footer>
