--- a/_sections/nutrition.html
+++ b/_sections/nutrition.html
@@ -1,5 +1,7 @@
 ---
-title: Nutrition
+title: Nutrition Shop
+cover-photo: assets/images/black background.jpg 
+cover-photo-alt: example cover photo
 icon: fa-envelope
 order: 5
 ---
