--- a/_sections/nutrition.html
+++ b/_sections/nutrition.html
@@ -2,7 +2,7 @@
 title: Nutrition Shop
 cover-photo: assets/images/black background.jpg 
 cover-photo-alt: example cover photo
-icon: fa-envelope
+icon: fa-th
 order: 5
 ---
 
