--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -22,7 +22,7 @@ MS, brain aneurysms, and parkinsons.</p>
    
 <p>Everywhere I looked, I saw people being harrassed and sold to and treated like just another dollar sign.</p>
   
-<p>Basically, I saw I whole bunch of BS.</p>
+<p>Basically, I saw a whole bunch of BS.</p>
   
 <p>Fast forward to today: I am an independent trainer and business owner dedicated to cutting through all the BS that's out there in order
 to help people truly change their lives.</p>
