--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -11,7 +11,7 @@ order: 1
 <header>
   <a href="#" class="image featured"><img src="assets/images/logo with text.png" alt="" /></a>
   
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/z3v7SNgjZ0s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  <div class="video-container"><iframe width="853" height="480" src="https://www.youtube.com/embed/z3v7SNgjZ0s&t=4s" frameborder="0" allowfullscreen></iframe></div>
 </header>
 
 <footer>
