--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -10,8 +10,7 @@ order: 1
   
 <header>
   <a href="#" class="image featured"><img src="assets/images/logo with text.png" alt="" /></a>
-  
-  <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/z3v7SNgjZ0s&t=4s" frameborder="0" allowfullscreen></iframe></div>
+  <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/z3v7SNgjZ0s" frameborder="0" allowfullscreen></iframe></div>
 </header>
 
 <footer>
