--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -27,4 +27,4 @@ calling for an appt. with Neil, he is knowledgable and attentive and can skillfu
  that will work for you & help you achieve your goals.”</p>
 <strong>-Kurt Tripp</strong>
 
-<a href="#" class="image featured"><img src="assets/images/Kurt Tripp.jpg" alt="" /></a>
+<a href="#" class="image featured"><img src="assets/images/Kurt Tripp 2.jpg" alt="" /></a>
