--- a/_sections/apparel.html
+++ b/_sections/apparel.html
@@ -4,4 +4,85 @@ icon: fa-th
 order: 6
 ---
 
-<h2>COMING SOON</h2>
+<div id='product-component-1540217624255'></div>
+    <script type="text/javascript">
+    /*<![CDATA[*/
+      (function () {
+        var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
+        if (window.ShopifyBuy) {
+          if (window.ShopifyBuy.UI) {
+            ShopifyBuyInit();
+          } else {
+            loadScript();
+          }
+        } else {
+          loadScript();
+        }
+
+      function loadScript() {
+        var script = document.createElement('script');
+        script.async = true;
+        script.src = scriptURL;
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
+        script.onload = ShopifyBuyInit;
+      }
+
+      function ShopifyBuyInit() {
+        var client = ShopifyBuy.buildClient({
+          domain: 'no-bs-nutrition-and-apparel.myshopify.com',
+          storefrontAccessToken: 'f34046a79a662973c824c586e0b9d565',
+        });
+
+        ShopifyBuy.UI.onReady(client).then(function (ui) {
+          ui.createComponent('product', {
+            id: [1710471512153],
+            node: document.getElementById('product-component-1540217624255'),
+            moneyFormat: '${{amount}}',
+            options: {"product":{"layout":"horizontal","variantId":"all","width":"100%","contents":{"img":false,"imgWithCarousel":true,"variantTitle":false,"description":true,"buttonWithQuantity":false,"quantity":false},"styles":{"product":{"text-align":"left","@media (min-width: 601px)":{"max-width":"100%","margin-left":"0","margin-bottom":"50px"}},"button":{"background-color":"#ce1d00",":hover":{"background-color":"#b91a00"},":focus":{"background-color":"#b91a00"}},"title":{"font-size":"26px"},"price":{"font-size":"18px"},"compareAt":{"font-size":"15px"}}},"cart":{"contents":{"button":true},"styles":{"button":{"background-color":"#ce1d00",":hover":{"background-color":"#b91a00"},":focus":{"background-color":"#b91a00"}},"footer":{"background-color":"#ffffff"}}},"modalProduct":{"contents":{"img":false,"imgWithCarousel":true,"variantTitle":false,"buttonWithQuantity":true,"button":false,"quantity":false},"styles":{"product":{"@media (min-width: 601px)":{"max-width":"100%","margin-left":"0px","margin-bottom":"0px"}},"button":{"background-color":"#ce1d00",":hover":{"background-color":"#b91a00"},":focus":{"background-color":"#b91a00"}}}},"toggle":{"styles":{"toggle":{"background-color":"#ce1d00",":hover":{"background-color":"#b91a00"},":focus":{"background-color":"#b91a00"}}}},"productSet":{"styles":{"products":{"@media (min-width: 601px)":{"margin-left":"-20px"}}}}},
+          });
+        });
+      }
+    })();
+    /*]]>*/
+    </script>
+<div id='product-component-1540217761472'></div>
+    <script type="text/javascript">
+    /*<![CDATA[*/
+      (function () {
+        var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
+        if (window.ShopifyBuy) {
+          if (window.ShopifyBuy.UI) {
+            ShopifyBuyInit();
+          } else {
+            loadScript();
+          }
+        } else {
+          loadScript();
+        }
+
+      function loadScript() {
+        var script = document.createElement('script');
+        script.async = true;
+        script.src = scriptURL;
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
+        script.onload = ShopifyBuyInit;
+      }
+
+      function ShopifyBuyInit() {
+        var client = ShopifyBuy.buildClient({
+          domain: 'no-bs-nutrition-and-apparel.myshopify.com',
+          storefrontAccessToken: 'f34046a79a662973c824c586e0b9d565',
+        });
+
+        ShopifyBuy.UI.onReady(client).then(function (ui) {
+          ui.createComponent('product', {
+            id: [1710604025945],
+            node: document.getElementById('product-component-1540217761472'),
+            moneyFormat: '${{amount}}',
+            options: {"product":{"variantId":"all","contents":{"imgWithCarousel":false,"variantTitle":false,"description":false,"buttonWithQuantity":false,"quantity":false},"styles":{"product":{"@media (min-width: 601px)":{"max-width":"calc(25% - 20px)","margin-left":"20px","margin-bottom":"50px"}},"button":{"background-color":"#ce1d00",":hover":{"background-color":"#b91a00"},":focus":{"background-color":"#b91a00"}}}},"cart":{"contents":{"button":true},"styles":{"button":{"background-color":"#ce1d00",":hover":{"background-color":"#b91a00"},":focus":{"background-color":"#b91a00"}},"footer":{"background-color":"#ffffff"}}},"modalProduct":{"contents":{"img":false,"imgWithCarousel":true,"variantTitle":false,"buttonWithQuantity":true,"button":false,"quantity":false},"styles":{"product":{"@media (min-width: 601px)":{"max-width":"100%","margin-left":"0px","margin-bottom":"0px"}},"button":{"background-color":"#ce1d00",":hover":{"background-color":"#b91a00"},":focus":{"background-color":"#b91a00"}}}},"toggle":{"styles":{"toggle":{"background-color":"#ce1d00",":hover":{"background-color":"#b91a00"},":focus":{"background-color":"#b91a00"}}}},"productSet":{"styles":{"products":{"@media (min-width: 601px)":{"margin-left":"-20px"}}}}},
+          });
+        });
+      }
+    })();
+    /*]]>*/
+    </script>
