--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -8,7 +8,7 @@ order: 3
 
 <a href="#" class="image featured"><img src="assets/images/IMG_0562.JPG" alt="" /></a>
 
-<p>My name is Neil Austin, certified No BS Fitness Professional. This is a test.</p>
+<p>My name is Neil Austin, certified No BS Fitness Professional.</p>
    
 <p>The thing that got me started on the crazy journey that's led me here was graduating High School at 135lbs soaking wet. Not exactly your starting quarterback.</p>
    
