--- a/_sections/apparel.html
+++ b/_sections/apparel.html
@@ -46,9 +46,7 @@ order: 6
     /*]]>*/
     </script>
 
-
-
-<div id='product-component-1540217761472'></div>
+<div id='product-component-1540259100217'></div>
     <script type="text/javascript">
     /*<![CDATA[*/
       (function () {
@@ -80,9 +78,9 @@ order: 6
         ShopifyBuy.UI.onReady(client).then(function (ui) {
           ui.createComponent('product', {
             id: [1710604025945],
-            node: document.getElementById('product-component-1540217761472'),
+            node: document.getElementById('product-component-1540259100217'),
             moneyFormat: '${{amount}}',
-            options: {"product":{"variantId":"all","contents":{"imgWithCarousel":false,"variantTitle":false,"description":false,"buttonWithQuantity":false,"quantity":false},"styles":{"product":{"@media (min-width: 601px)":{"max-width":"calc(25% - 20px)","margin-left":"20px","margin-bottom":"50px"}},"button":{"background-color":"#ce1d00",":hover":{"background-color":"#b91a00"},":focus":{"background-color":"#b91a00"}}}},"cart":{"contents":{"button":true},"styles":{"button":{"background-color":"#ce1d00",":hover":{"background-color":"#b91a00"},":focus":{"background-color":"#b91a00"}},"footer":{"background-color":"#ffffff"}}},"modalProduct":{"contents":{"img":false,"imgWithCarousel":true,"variantTitle":false,"buttonWithQuantity":true,"button":false,"quantity":false},"styles":{"product":{"@media (min-width: 601px)":{"max-width":"100%","margin-left":"0px","margin-bottom":"0px"}},"button":{"background-color":"#ce1d00",":hover":{"background-color":"#b91a00"},":focus":{"background-color":"#b91a00"}}}},"toggle":{"styles":{"toggle":{"background-color":"#ce1d00",":hover":{"background-color":"#b91a00"},":focus":{"background-color":"#b91a00"}}}},"productSet":{"styles":{"products":{"@media (min-width: 601px)":{"margin-left":"-20px"}}}}},
+            options: {"product":{"layout":"horizontal","variantId":"all","width":"100%","contents":{"img":false,"imgWithCarousel":true,"variantTitle":false,"description":true,"buttonWithQuantity":false,"quantity":false},"styles":{"product":{"text-align":"left","@media (min-width: 601px)":{"max-width":"100%","margin-left":"0","margin-bottom":"50px"}},"button":{"background-color":"#ce1d00",":hover":{"background-color":"#b91a00"},":focus":{"background-color":"#b91a00"}},"title":{"font-size":"26px"},"price":{"font-size":"18px"},"compareAt":{"font-size":"15px"}}},"cart":{"contents":{"button":true},"styles":{"button":{"background-color":"#ce1d00",":hover":{"background-color":"#b91a00"},":focus":{"background-color":"#b91a00"}},"footer":{"background-color":"#ffffff"}}},"modalProduct":{"contents":{"img":false,"imgWithCarousel":true,"variantTitle":false,"buttonWithQuantity":true,"button":false,"quantity":false},"styles":{"product":{"@media (min-width: 601px)":{"max-width":"100%","margin-left":"0px","margin-bottom":"0px"}},"button":{"background-color":"#ce1d00",":hover":{"background-color":"#b91a00"},":focus":{"background-color":"#b91a00"}}}},"toggle":{"styles":{"toggle":{"background-color":"#ce1d00",":hover":{"background-color":"#b91a00"},":focus":{"background-color":"#b91a00"}}}},"productSet":{"styles":{"products":{"@media (min-width: 601px)":{"margin-left":"-20px"}}}}},
           });
         });
       }
