--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -3,3 +3,15 @@ title: Testimonials
 icon: fa-th
 order: 2
 ---
+
+"One of a kind!
+
+As a chiropractor and  rehab specialist Neil is my go to guy when I need 
+to refer my patients for training.  His knowledge as a trainer, passion 
+for helping people and skill set to progress people to reach their 
+goals, is unparalleled.  He takes the time to get to know you and what 
+you are looking for, rather than a cookie cutter template.  He is a 
+master at his craft and I couldn't recommend him more.
+
+Also, as a bonus he is a super likeable guy!"
+- Zach Greenwade, Chiropactor/Rehab Specialist
