--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -3,7 +3,7 @@ title: Testimonials
 icon: fa-th
 order: 2
 ---
-
+<a href="#" class="image featured"><img src="assets/images/Zach-Greenwade.JPG" alt="" /></a>
 "One of a kind!
 
 As a chiropractor and  rehab specialist Neil is my go to guy when I need 
