--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -15,3 +15,18 @@ master at his craft and I couldn't recommend him more.
 
 Also, as a bonus he is a super likeable guy!"
 - Zach Greenwade, Chiropactor/Rehab Specialist
+
+<a href="#" class="image featured"><img src="assets/images/IMG_0562.JPG" alt="" /></a>
+“I hired Neil because I was looking to get strong and buff like him. 
+My results have been wonderful I have gotten a lot stronger which gave me a lot more self-confidence 
+which keeps me coming back every time. I would highly recommend Neil Austin's services as a personal trainer."
+- Shreyas Annapureddy, Client
+
+<a href="#" class="image featured"><img src="assets/images/IMG_0562.JPG" alt="" /></a>
+“I hired Neil after getting fed up with a long period of being in bad shape and often sick. 
+I knew I wouldn't do well unless my routine included weight training. From his profile information I knew Neil would be a good fit. 
+I have been working with him for a year and my results have been amazing.  I've never been stronger, 
+I've lost fat and gained a lot of muscle.  I could barely lift the bar for bench press and can now do 120lb 
+and I just hit 410 on the leg press. Neil knows exactly how to motivate me and puts together challenging programs for me. 
+I don't hide from the camera anymore and it's great to wear tank tops without being selfish conscious.”
+- Juli Bacon, Client
