--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -3,7 +3,7 @@ title: Testimonials
 icon: fa-th
 order: 2
 ---
-<a href="#" class="image featured"><img src="assets/images/Zach-Greenwade.JPG" alt="" /></a>
+<a href="#" class="image featured"><img src="assets/images/Zach-Greenwade.jpg" alt="" /></a>
 "One of a kind!
 
 As a chiropractor and  rehab specialist Neil is my go to guy when I need 
@@ -22,7 +22,7 @@ My results have been wonderful I have gotten a lot stronger which gave me a lot 
 which keeps me coming back every time. I would highly recommend Neil Austin's services as a personal trainer."
 - Shreyas Annapureddy, Client
 
-<a href="#" class="image featured"><img src="assets/images/Juli Bacon.JPG" alt="" /></a>
+<a href="#" class="image featured"><img src="assets/images/Juli Bacon.jpg" alt="" /></a>
 “I hired Neil after getting fed up with a long period of being in bad shape and often sick. 
 I knew I wouldn't do well unless my routine included weight training. From his profile information I knew Neil would be a good fit. 
 I have been working with him for a year and my results have been amazing.  I've never been stronger, 
