--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -14,7 +14,7 @@ master at his craft and I couldn't recommend him more.
 
 Also, as a bonus he is a super likeable guy!"
 - Zach Greenwade, Chiropactor/Rehab Specialist
-<a href="#" class="image featured"><img src="assets/images/Zach-Greenwade.jpg" alt="" /></a>
+<img src="assets/images/Zach-Greenwade.jpg" alt="" height="31" width="30">
 
 “I hired Neil because I was looking to get strong and buff like him. 
 My results have been wonderful I have gotten a lot stronger which gave me a lot more self-confidence 
