--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -3,6 +3,7 @@ title: Testimonials
 icon: fa-th
 order: 2
 ---
+<img src="assets/images/Zach-Greenwade.jpg" alt="" height="311" width="300">
 "One of a kind!
 
 As a chiropractor and  rehab specialist Neil is my go to guy when I need 
@@ -14,14 +15,16 @@ master at his craft and I couldn't recommend him more.
 
 Also, as a bonus he is a super likeable guy!"
 - Zach Greenwade, Chiropactor/Rehab Specialist
-<img src="assets/images/Zach-Greenwade.jpg" alt="" height="311" width="300">
 
+
+<img src="assets/images/2524.JPG" alt="" height="300" width="300">
 “I hired Neil because I was looking to get strong and buff like him. 
 My results have been wonderful I have gotten a lot stronger which gave me a lot more self-confidence 
 which keeps me coming back every time. I would highly recommend Neil Austin's services as a personal trainer."
 - Shreyas Annapureddy, Client
-<a href="#" class="image featured"><img src="assets/images/IMG_2524.JPG" alt="" /></a>
 
+
+<img src="assets/images/Juli Bacon.jpg" alt="" height="249" width="305.6">
 “I hired Neil after getting fed up with a long period of being in bad shape and often sick. 
 I knew I wouldn't do well unless my routine included weight training. From his profile information I knew Neil would be a good fit. 
 I have been working with him for a year and my results have been amazing.  I've never been stronger, 
@@ -29,4 +32,3 @@ I've lost fat and gained a lot of muscle.  I could barely lift the bar for bench
 and I just hit 410 on the leg press. Neil knows exactly how to motivate me and puts together challenging programs for me. 
 I don't hide from the camera anymore and it's great to wear tank tops without being selfish conscious.”
 - Juli Bacon, Client
-<a href="#" class="image featured"><img src="assets/images/Juli Bacon.jpg" alt="" /></a>
