--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -17,11 +17,15 @@ Also, as a bonus he is a super likeable guy!"
 - Zach Greenwade, Chiropactor/Rehab Specialist
 
 
-<img src="assets/images/2524.JPG" alt="" height="300" width="300">
+
+
+<img src="assets/images/IMG_2524.JPG" alt="" height="300" width="300">
 “I hired Neil because I was looking to get strong and buff like him. 
 My results have been wonderful I have gotten a lot stronger which gave me a lot more self-confidence 
 which keeps me coming back every time. I would highly recommend Neil Austin's services as a personal trainer."
 - Shreyas Annapureddy, Client
+
+
 
 
 <img src="assets/images/Juli Bacon.jpg" alt="" height="249" width="305.6">
