--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -15,19 +15,13 @@ master at his craft and I couldn't recommend him more.
 
 Also, as a bonus he is a super likeable guy!"
 - Zach Greenwade, Chiropactor/Rehab Specialist
-
-
-
-
+&ensp
 <img src="assets/images/IMG_2524.JPG" alt="" height="300" width="300">
 “I hired Neil because I was looking to get strong and buff like him. 
 My results have been wonderful I have gotten a lot stronger which gave me a lot more self-confidence 
 which keeps me coming back every time. I would highly recommend Neil Austin's services as a personal trainer."
 - Shreyas Annapureddy, Client
-
-
-
-
+&ensp
 <img src="assets/images/Juli Bacon.jpg" alt="" height="249" width="305.6">
 “I hired Neil after getting fed up with a long period of being in bad shape and often sick. 
 I knew I wouldn't do well unless my routine included weight training. From his profile information I knew Neil would be a good fit. 
